# frkl-name

./: .coveragerc  .cruft.json  .frkl.project  .gitignore  .gitlab-ci.yml  .isort.cfg  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
ci/build-binary/linux/: requirements-build.txt
ci/docker/: Dockerfile
scripts/build-binary/: onefile.spec
src/frkl_name/: __init__.py  _meta.py  defaults.py
tests/: conftest.py  test_frkl_name.py
