[build-system]
requires = [
    "setuptools >= 41.6.0",
    "setuptools_scm >= 3.3.3, <4",
    "wheel >= 0.33.6",
]
build-backend = 'setuptools.build_meta'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | external
)/
'''

[tool.portray]
output_dir = "site"
modules = [
"frkl_name",
]
extra_markdown_extensions = [
  "attr_list"
]
include_reference_documentation = false
[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue grey", accent = "pink"}


[tool.portray.mkdocs]
repo_url = "https://gitlab.com/frkl/frkl_name"
repo_name = "frkl_name"
plugins = [
  "search",
  "macros"
]

[tool.dephell.main]
from = {format = "setuppy", path = "setup.py"}
